# reacter

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  blacklist.json  bot_data.db  docker-compose.yml  main.py  nonexistent_file.json  pyproject.toml
database/: emoji_blacklist_compat.py  guild_blacklist_manager.py  guild_config_manager.py  logging_manager.py  manager.py  migration_manager.py  models.py
logs/: audit.jsonl
migration_backups/: blacklist_backup_20250714_182915.json
tests/: test_bot_error_resilience.py  test_bot_startup_integration.py  test_database_error_recovery.py  test_database_manager.py  test_database_models.py  test_database_monitoring.py  test_emoji_blacklist_compat.py  test_error_handling.py  test_guild_blacklist_manager.py  test_guild_config_manager.py  test_guild_lifecycle.py  test_guild_settings_commands.py  test_guild_specific_commands.py  test_logging_integration.py  test_logging_manager.py  test_migration_manager.py  test_permissions.py  test_reaction_handling.py
