[project]
name = "reacter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "discord>=2.3.2",
    "dotenv>=0.9.9",
    "logging>=0.4.9.6",
    "aiosqlite>=0.19.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
